[package]
name = "utils"
version = "1.0.0"
edition = "2021"

[dependencies]
failure = "0.1.5"
config = "0.10.1"
lazy_static = "1.4"
slog = "2.5.2"
slog-syslog = "0.12.0"
slog-term = "2.6.0"
slog-scope = "4.3.0"
slog-async = "2.5.0"
slog-stdlog = "4.1.0"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"]}
reqwest = "0.11.10"
axum = "0.5.3"
axum-macros = "0.2.0"
http-signature-normalization-reqwest = { version = "0.5.0", default-features = false, features = ["sha-2"] }
sha2 = "0.10.2"
rsa = "0.6.1"
thiserror = "1.0.30"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread" ] }
base64 = "*"
